# mipt-thesis

./:  main.py  .gitignore  README.md  conv_lr_decay_19_11_x8.sav  convex_net_greeks.csv  convex_net_prices.csv  greeks_analytics.ipynb  greeks_convex.csv  main.py  models_and_data_desc.md  net_prices.csv  only_greeks_con.csv  only_greeks_pos.csv  options_prices.csv  pos_ffnn_intr_val_log_no_overfit_1100_epochs.sav  pos_intr_log_20k_paths_overfit_17_12.sav  pos_intr_no_log.sav  pos_lr_decay_19_11.sav  pos_net_greeks.csv  pos_net_prices.csv  pos_time_prices.csv  prices_mc_20000_paths_5000.csv  prices_positive.csv  pyproject.toml  settings.json  settings.py  trained_con_doubles.sav  trained_convex.sav  trained_pos_doubles.sav  trained_sigma.sav  trained_sigma_fixed_mc.sav
analytics/: analyzer.py
black_scholes_inverse/: predict_vol.csv  solver.py
convex_network/: net_maker.py  network.py
datasets/: cme_data.csv
double_net_pricer/: graphs.py  intrinsic.py  pricer.py
monte_carlo/: __init__.py  dataset_maker.py  greeks.py  path_generator.py  pricer.py
neural_network/: net_maker.py  network.py
positive_network/: net_maker.py  network.py
preprocessing/: intrinsic_val.py
sandbox/: av.csv  bs_for_geom_options.py  convexity.py  no_av.csv  test.py
semipositive_network/: net_maker.py  network.py
sigma_network/: net_maker.py  network.py
specific_datasets/: fixed_convex_net_prices.csv  fixed_pos_net_prices.csv  fixed_rate_dataset.csv  fixed_spot_dataset.csv  fixed_ttm_dataset.csv  fixed_vol_dataset.csv
utils/: batches.py  mapping.py  plotting.py  typing.py
(+236 files in other folders)
