[tool.poetry]
name = "mipt-thesis"
version = "0.1.0"
description = "Bachelor thesis at MIPT"
authors = ["Aleksandr Yaskevich <yaskevas@yandex.ru>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.18,<1.22"
numba = "^0.55.1"
pandas = "^1.4.0"
scipy = "^1.8.0"
torch = "^1.10.2"
matplotlib = "^3.5.1"
sklearn = "^0.0"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
